force-app/main/default/objects/RQnTC__c/RQnTC__c.object-meta.xml
<CustomObject>
    <description>RQ 와 Terms &amp; Condition Junction 관리 Object</description>
    <label>RQnT&amp;C</label>
    <nameField>
        <displayFormat>RQTC-{0000000}</displayFormat>
        <label>No,</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RQnT&amp;C</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>