force-app/main/default/objects/RQnTC__c/fields/Slip_lk__c.field-meta.xml
<CustomField>
    <fullName>Slip_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slip Information</label>
    <referenceTo>OPP_SlipInfo__c</referenceTo>
    <relationshipLabel>Terms &amp; Conditions</relationshipLabel>
    <relationshipName>RQnTnCBySlip</relationshipName>
    <type>Lookup</type>
</CustomField>