force-app/main/default/objects/RQnTC__c/fields/TermsandConditions_lk__c.field-meta.xml
<CustomField>
    <fullName>TermsandConditions_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms and Conditions</label>
    <referenceTo>COM_TermsandConditions__c</referenceTo>
    <relationshipLabel>RQ</relationshipLabel>
    <relationshipName>RQnTnCByTnC</relationshipName>
    <type>Lookup</type>
</CustomField>