force-app/main/default/objects/RQnTC__c/fields/TnCENG__c.field-meta.xml
<CustomField>
    <fullName>TnCENG__c</fullName>
    <label>T&amp;C(ENG)</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>