force-app/main/default/objects/RQnTC__c/fields/TnCNameENG__c.field-meta.xml
<CustomField>
    <fullName>TnCNameENG__c</fullName>
    <label>T&amp;C Name(ENG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>